updating the redirecting link, still not fully functional YET.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/create-prospect-upload.css" />
     <link rel="stylesheet" href="/css/create-prospect.css" />
-    <link rel="stylesheet" href="/css/dashboard-page.css" />
+    <!-- <link rel="stylesheet" href="/css/dashboard-page.css" /> -->
+     <link rel="stylesheet" href="/css/dashboard-page.css">
     <link rel="stylesheet" href="/css/ongoing-prospect.css" />
     <link rel="stylesheet" href="/css/prospect.css" />
     <link rel="stylesheet" href="/css/report-data.css" />
