eddited css in create prospect and prospect page

--- a/pages/create-prospect.html
+++ b/pages/create-prospect.html
@@ -105,8 +105,10 @@
               <img src="../assets/cloudIcon.svg" alt="" />
             </div>
             <div>
-              <label for="attachDoc" id="attachDocLbl"><span style="color: #e6b014">Select file</span> or drag
-                and drop</label>
+              <label for="attachDoc" id="attachDocLbl">
+                <span style="color: #e6b014">Select file</span>
+                <span class="desktopProp"> or drag and drop</span>
+              </label>
               <input type="file" name="attachDoc" id="attachDoc" />
               <p class="clxWarningP">CSV or .XLSX file</p>
             </div>
