--- a/pages/prospect.html
+++ b/pages/prospect.html
@@ -47,8 +47,8 @@
       <span class="prospectTableNavChild ongoingNav">Ongoing</span>
       <span class="prospectTableNavChild outtaNav">Out of SLA</span>
     </div>
-    <div class="createprospect-tablewrapper prospectTableWraper">
-      <table class="createprospecttable prospectTable">
+    <div class="createprospect-tablewrapper prospectTableWraper" id="prospectTableWraper">
+      <table class="createprospecttable prospectTable" id="prospectTable">
         <thead>
           <tr>
             <th></th>
@@ -77,7 +77,7 @@
 
           </tr>
         </thead>
-        <tbody>
+        <tbody id="prospectTableBody">
           <tr>
             <td><img src="../assets/avatar-prospect-user.svg" /></td>
             <td>Nurudeen Ibrahim</td>
@@ -166,7 +166,7 @@
       </table>
       <div class="tableWrapFooter">
       <div class="leftTableWrapFooter">
-        <img src="../assets/leftArrow.svg" alt="" style="width: 14px;">
+        <img src="../assets/leftArrow.svg" alt="" style="width: 10px;">
         <div class="prospectPgCount">
           <span>1</span>
           <span>2</span>
