--- a/pages/report-data.html
+++ b/pages/report-data.html
@@ -1,5 +1,3 @@
-<!-- <a href="#/report" exact="active-link"> Back to report </a> -->
-
 <div class="report-data-container">
   <div class="report-data-header">
     <h1>Reports</h1>
@@ -18,7 +16,9 @@
         <button class="report-data-export">Export Report</button>
       </div>
     </div>
-    <div class="bottom-line"><div class="bottom-inner"></div></div>
+    <div class="bottom-line">
+      <div class="bottom-inner"></div>
+    </div>
     <div class="report-data-cards">
       <!-- First Card (Products Bought) -->
       <div class="report-data-card">
@@ -128,15 +128,87 @@
       </div>
     </div>
   </div>
-  <div id="report-data">
+  <div id="report-data" i>
     <div class="chart-flex">
       <div class="settings"></div>
-      <button>incoming</button>
+      <button
+        class="toggle-btn"
+        data-toggle="report-data-sec"
+        data-parent="report-data"
+      >
+        incoming
+      </button>
     </div>
     <div class="chartBox">
       <canvas id="myChart"></canvas>
     </div>
-    <!-- your work goes in here -->
+  </div>
+
+  <div id="report-data-sec" k-show i>
+    <div class="chart-flex">
+      <div class="settings"></div>
+      <button
+        class="toggle-btn"
+        data-toggle="report-data"
+        data-parent="report-data-sec"
+      >
+        incoming
+      </button>
+    </div>
+    <div class="report-data-container2">
+      <div class="chart-container">
+        <canvas id="reportChart"></canvas>
+      </div>
+      <div class="table-container">
+        <table class="sales-report-table animatable-table">
+          <thead>
+            <tr>
+              <th>Category</th>
+              <th>Motor</th>
+              <th>Term Life</th>
+              <th>Group Life</th>
+              <th>Leadway Savings</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>10,000</td>
+              <td style="color: green">10,000</td>
+              <td style="color: green">30,000</td>
+              <td style="color: green">65,023.26</td>
+              <td style="color: green">169,302.33</td>
+            </tr>
+            <tr>
+              <td>3,000</td>
+              <td style="color: orange">3,000</td>
+              <td style="color: orange">10,000</td>
+              <td style="color: orange">15,000</td>
+              <td style="color: orange">25,000</td>
+            </tr>
+            <tr>
+              <td>7,000</td>
+              <td style="color: blue">7,000</td>
+              <td style="color: blue">20,000</td>
+              <td style="color: blue">50,023.26</td>
+              <td style="color: blue">144,302.33</td>
+            </tr>
+            <tr>
+              <td>2,000</td>
+              <td style="color: red">2,000</td>
+              <td style="color: red">2,000</td>
+              <td style="color: red">2,000</td>
+              <td style="color: red">2,000</td>
+            </tr>
+            <tr>
+              <td style="background-color: lightgreen">5,000</td>
+              <td style="background-color: lightgreen">18,000</td>
+              <td style="background-color: lightgreen">48,026.36</td>
+              <td style="background-color: lightgreen">142,302.33</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
 </div>
 
