chore: cleaned-up report ui

--- a/pages/report-table.html
+++ b/pages/report-table.html
@@ -61,28 +61,28 @@
 
       <tbody>
         <tr>
-          <td>Report 001</td>
+          <td class="first-td">Report 001</td>
           <td>04 Jan 2023</td>
           <td>Michael Adesanya</td>
           <td>09 Jan 2023</td>
           <td class="dots">...</td>
         </tr>
         <tr>
-          <td>Report 002</td>
+          <td  class="first-td">Report 002</td>
           <td>04 Jan 2023</td>
           <td>Michael Adesanya</td>
           <td>09 Jan 2023</td>
           <td class="dots">...</td>
         </tr>
         <tr>
-          <td>Report 003</td>
+          <td  class="first-td">Report 003</td>
           <td>04 Jan 2023</td>
           <td>Michael Adesanya</td>
           <td>09 Jan 2023</td>
           <td class="dots">...</td>
         </tr>
         <tr>
-          <td>Report 004</td>
+          <td class="first-td">Report 004</td>
           <td>04 Jan 2023</td>
           <td>Michael Adesanya</td>
           <td>09 Jan 2023</td>
