--- a/pages/report-data.html
+++ b/pages/report-data.html
@@ -24,7 +24,10 @@
       <div class="report-data-card">
         <div class="report-data-card-info">
           <div class="card-up">
-            <img src="../assets/blue.svg" alt="Products Bought Icon" />
+            <img
+              src="../assets/blue.svg"
+              alt="Products Bought Icon"
+            />
             <div class="details">
               <h3>134</h3>
               <p>Products Bought</p>
@@ -44,7 +47,10 @@
       <div class="report-data-card">
         <div class="report-data-card-info">
           <div class="card-up">
-            <img src="../assets/green.svg" alt="Active Policies Icon" />
+            <img
+              src="../assets/green.svg"
+              alt="Active Policies Icon"
+            />
             <div class="details">
               <h3>78</h3>
               <p>Active Policies</p>
@@ -125,25 +131,36 @@
   <div id="report-data" i>
     <div class="chart-flex">
       <div class="settings"></div>
-      <button class="toggle-btn" data-toggle="report-data-sec" data-parent="report-data">incoming</button>
+      <button
+        class="toggle-btn"
+        data-toggle="report-data-sec"
+        data-parent="report-data"
+      >
+        incoming
+      </button>
     </div>
     <div class="chartBox">
       <canvas id="myChart"></canvas>
     </div>
   </div>
 
-
   <div id="report-data-sec" k-show i>
     <div class="chart-flex">
       <div class="settings"></div>
-      <button class="toggle-btn" data-toggle="report-data" data-parent="report-data-sec">incoming</button>
+      <button
+        class="toggle-btn"
+        data-toggle="report-data"
+        data-parent="report-data-sec"
+      >
+        incoming
+      </button>
     </div>
     <div class="report-data-container2">
       <div class="chart-container">
         <canvas id="reportChart"></canvas>
       </div>
       <div class="table-container">
-        <table class="report-table animatable-table">
+        <table class="sales-report-table animatable-table">
           <thead>
             <tr>
               <th>Category</th>
@@ -156,37 +173,37 @@
           <tbody>
             <tr>
               <td>10,000</td>
-              <td style="color: green;">10,000</td>
-              <td style="color: green;">30,000</td>
-              <td style="color: green;">65,023.26</td>
-              <td style="color: green;">169,302.33</td>
+              <td style="color: green">10,000</td>
+              <td style="color: green">30,000</td>
+              <td style="color: green">65,023.26</td>
+              <td style="color: green">169,302.33</td>
             </tr>
             <tr>
               <td>3,000</td>
-              <td style="color: orange;">3,000</td>
-              <td style="color: orange;">10,000</td>
-              <td style="color: orange;">15,000</td>
-              <td style="color: orange;">25,000</td>
+              <td style="color: orange">3,000</td>
+              <td style="color: orange">10,000</td>
+              <td style="color: orange">15,000</td>
+              <td style="color: orange">25,000</td>
             </tr>
             <tr>
               <td>7,000</td>
-              <td style="color: blue;">7,000</td>
-              <td style="color: blue;">20,000</td>
-              <td style="color: blue;">50,023.26</td>
-              <td style="color: blue;">144,302.33</td>
+              <td style="color: blue">7,000</td>
+              <td style="color: blue">20,000</td>
+              <td style="color: blue">50,023.26</td>
+              <td style="color: blue">144,302.33</td>
             </tr>
             <tr>
               <td>2,000</td>
-              <td style="color: red;">2,000</td>
-              <td style="color: red;">2,000</td>
-              <td style="color: red;">2,000</td>
-              <td style="color: red;">2,000</td>
+              <td style="color: red">2,000</td>
+              <td style="color: red">2,000</td>
+              <td style="color: red">2,000</td>
+              <td style="color: red">2,000</td>
             </tr>
             <tr>
-              <td style="background-color: lightgreen;">5,000</td>
-              <td style="background-color: lightgreen;">18,000</td>
-              <td style="background-color: lightgreen;">48,026.36</td>
-              <td style="background-color: lightgreen;">142,302.33</td>
+              <td style="background-color: lightgreen">5,000</td>
+              <td style="background-color: lightgreen">18,000</td>
+              <td style="background-color: lightgreen">48,026.36</td>
+              <td style="background-color: lightgreen">142,302.33</td>
             </tr>
           </tbody>
         </table>
