--- a/pages/report-table.html
+++ b/pages/report-table.html
@@ -214,19 +214,43 @@
     <div class="informationdetail-box">
       <div class="person-detail">
         <h6>Name</h6>
-        <p>Report 001</p>
+        <p class="value">Report 001</p>
       </div>
       <div class="person-detail">
         <h6>Date Created</h6>
-        <p>04 Jan 2023</p>
+        <p class="value">04 Jan 2023</p>
       </div>
       <div class="person-detail">
         <h6>Created by</h6>
-        <p>Michael Adesanya</p>
+        <p class="value">Michael Adesanya</p>
       </div>
       <div class="person-detail">
         <h6>Date modified</h6>
-        <p>09 Jan 2023</p>
+        <p class="value">09 Jan 2023</p>
+      </div>
+      <div class="person-detail">
+        <h6>Action</h6>
+        <p >...</p>
+      </div>
+    </div>
+  </div>
+  <div class="block-table">
+    <div class="informationdetail-box">
+      <div class="person-detail">
+        <h6>Name</h6>
+        <p class="value">Report 001</p>
+      </div>
+      <div class="person-detail">
+        <h6>Date Created</h6>
+        <p class="value">04 Jan 2023</p>
+      </div>
+      <div class="person-detail">
+        <h6 >Created by</h6>
+        <p class="value">Michael Adesanya</p>
+      </div>
+      <div class="person-detail">
+        <h6>Date modified</h6>
+        <p class="value">09 Jan 2023</p>
       </div>
       <div class="person-detail">
         <h6>Action</h6>
@@ -238,19 +262,43 @@
     <div class="informationdetail-box">
       <div class="person-detail">
         <h6>Name</h6>
-        <p>Report 001</p>
+        <p class="value">Report 001</p>
       </div>
       <div class="person-detail">
         <h6>Date Created</h6>
-        <p>04 Jan 2023</p>
+        <p class="value">04 Jan 2023</p>
       </div>
       <div class="person-detail">
         <h6>Created by</h6>
-        <p>Michael Adesanya</p>
+        <p class="value">Michael Adesanya</p>
       </div>
       <div class="person-detail">
         <h6>Date modified</h6>
-        <p>09 Jan 2023</p>
+        <p class="value">09 Jan 2023</p>
+      </div>
+      <div class="person-detail">
+        <h6>Action</h6>
+        <p class="value">...</p>
+      </div>
+    </div>
+  </div>
+  <div class="block-table">
+    <div class="informationdetail-box">
+      <div class="person-detail">
+        <h6>Name</h6>
+        <p class="value">Report 001</p>
+      </div>
+      <div class="person-detail">
+        <h6>Date Created</h6>
+        <p class="value">04 Jan 2023</p>
+      </div>
+      <div class="person-detail">
+        <h6>Created by</h6>
+        <p class="value">Michael Adesanya</p>
+      </div>
+      <div class="person-detail">
+        <h6>Date modified</h6>
+        <p class="value">09 Jan 2023</p>
       </div>
       <div class="person-detail">
         <h6>Action</h6>
@@ -262,67 +310,19 @@
     <div class="informationdetail-box">
       <div class="person-detail">
         <h6>Name</h6>
-        <p>Report 001</p>
+        <p class="value">Report 001</p>
       </div>
       <div class="person-detail">
         <h6>Date Created</h6>
-        <p>04 Jan 2023</p>
+        <p class="value">04 Jan 2023</p>
       </div>
       <div class="person-detail">
         <h6>Created by</h6>
-        <p>Michael Adesanya</p>
+        <p class="value">Michael Adesanya</p>
       </div>
       <div class="person-detail">
         <h6>Date modified</h6>
-        <p>09 Jan 2023</p>
-      </div>
-      <div class="person-detail">
-        <h6>Action</h6>
-        <p>...</p>
-      </div>
-    </div>
-  </div>
-  <div class="block-table">
-    <div class="informationdetail-box">
-      <div class="person-detail">
-        <h6>Name</h6>
-        <p>Report 001</p>
-      </div>
-      <div class="person-detail">
-        <h6>Date Created</h6>
-        <p>04 Jan 2023</p>
-      </div>
-      <div class="person-detail">
-        <h6>Created by</h6>
-        <p>Michael Adesanya</p>
-      </div>
-      <div class="person-detail">
-        <h6>Date modified</h6>
-        <p>09 Jan 2023</p>
-      </div>
-      <div class="person-detail">
-        <h6>Action</h6>
-        <p>...</p>
-      </div>
-    </div>
-  </div>
-  <div class="block-table">
-    <div class="informationdetail-box">
-      <div class="person-detail">
-        <h6>Name</h6>
-        <p>Report 001</p>
-      </div>
-      <div class="person-detail">
-        <h6>Date Created</h6>
-        <p>04 Jan 2023</p>
-      </div>
-      <div class="person-detail">
-        <h6>Created by</h6>
-        <p>Michael Adesanya</p>
-      </div>
-      <div class="person-detail">
-        <h6>Date modified</h6>
-        <p>09 Jan 2023</p>
+        <p class="value">09 Jan 2023</p>
       </div>
       <div class="person-detail">
         <h6>Action</h6>
