--- a/pages/report-data.html
+++ b/pages/report-data.html
@@ -3,17 +3,32 @@
     <h1>Reports</h1>
     <div class="report-data-date-range">
       <label for="startDate">Showing data from:</label>
-      <input type="date" id="startDate" />
-      <input type="date" id="endDate" />
+      <div class="date-flex">
+        <p>Wed March 29, 2020</p>
+        <img src="../assets/date-caret.svg" alt="" />
+      </div>
+      <div class="date-flex">
+        <p>Wed March 29, 2020</p>
+        <img src="../assets/date-caret.svg" alt="" />
+      </div>
     </div>
   </div>
 
   <div class="report-data-sales">
     <div class="flex">
-      <h2>Sales Report</h2>
+      <div class="sub-flex">
+        <h2>Sales Report</h2>
+        <img src="../assets/sales-x.svg" alt="" />
+      </div>
       <div class="report-data-actions">
-        <button class="report-data-back">Back To Report</button>
-        <button class="report-data-export">Export Report</button>
+        <button class="report-data-back">
+          <img src="../assets/back.svg" alt="" />
+          Back To Report
+        </button>
+        <button class="report-data-export">
+          <img src="../assets/export-arrow.svg" alt="" />
+          Export Report
+        </button>
       </div>
     </div>
     <div class="bottom-line">
@@ -32,7 +47,7 @@
               <h3>134</h3>
               <p>Products Bought</p>
             </div>
-            <div class="details">
+            <div class="details2">
               <img src="../assets/greenup.svg" alt="" />
               <span>-6</span>
             </div>
@@ -55,7 +70,7 @@
               <h3>78</h3>
               <p>Active Policies</p>
             </div>
-            <div class="details">
+            <div class="details2">
               <img src="../assets/greenup.svg" alt="" />
               <span>-6</span>
             </div>
@@ -82,7 +97,7 @@
               <h3>20</h3>
               <p>Drop Offs</p>
             </div>
-            <div class="details">
+            <div class="details2">
               <img src="../assets/greenup.svg" alt="" />
               <span>-6</span>
             </div>
@@ -109,7 +124,7 @@
               <h3>5</h3>
               <p>In Progress</p>
             </div>
-            <div class="details">
+            <div class="details2">
               <img src="../assets/greenup.svg" alt="" />
               <span>-6</span>
             </div>
@@ -136,7 +151,7 @@
         data-toggle="report-data-sec"
         data-parent="report-data"
       >
-        incoming
+        Income Breakdown
       </button>
     </div>
     <div class="chartBox">
@@ -152,18 +167,28 @@
         data-toggle="report-data"
         data-parent="report-data-sec"
       >
-        incoming
+        Back to reports
+        <img src="../assets/arrow-right.svg" alt="" />
       </button>
     </div>
     <div class="report-data-container2">
       <div class="chart-container">
+        <div class="span">
+          <span>jkk</span>
+          <span>jkk</span>
+          <span>jkk</span>
+        </div>
         <canvas id="reportChart"></canvas>
       </div>
       <div class="table-container">
+        <div class="span">
+          <span>jkk</span>
+          <span>jkk</span>
+          <span>jkk</span>
+        </div>
         <table class="sales-report-table animatable-table">
           <thead>
             <tr>
-              <th>Category</th>
               <th>Motor</th>
               <th>Term Life</th>
               <th>Group Life</th>
@@ -172,38 +197,36 @@
           </thead>
           <tbody>
             <tr>
-              <td>10,000</td>
-              <td style="color: green">10,000</td>
-              <td style="color: green">30,000</td>
-              <td style="color: green">65,023.26</td>
-              <td style="color: green">169,302.33</td>
+              <td style="color: #47a51a">10,000</td>
+              <td style="color: #47a51a">30,000</td>
+              <td style="color: #47a51a">65,023.26</td>
+              <td style="color: #47a51a">169,302.33</td>
             </tr>
             <tr>
-              <td>3,000</td>
-              <td style="color: orange">3,000</td>
-              <td style="color: orange">10,000</td>
-              <td style="color: orange">15,000</td>
-              <td style="color: orange">25,000</td>
+              <td style="color: #f66b22">3,000</td>
+              <td style="color: #f66b22">10,000</td>
+              <td style="color: #f66b22">15,000</td>
+              <td style="color: #f66b22">25,000</td>
+            </tr>
+
+            <tr>
+              <td style="color: #0096d6">7,000</td>
+              <td style="color: #0096d6">20,000</td>
+              <td style="color: #0096d6">50,023.26</td>
+              <td style="color: #0096d6">144,302.33</td>
             </tr>
             <tr>
-              <td>7,000</td>
-              <td style="color: blue">7,000</td>
-              <td style="color: blue">20,000</td>
-              <td style="color: blue">50,023.26</td>
-              <td style="color: blue">144,302.33</td>
+              <td style="color: #f66b22">2,000</td>
+              <td style="color: #f66b22">2,000</td>
+              <td style="color: #f66b22">2,000</td>
+              <td style="color: #f66b22">2,000</td>
             </tr>
+
             <tr>
-              <td>2,000</td>
-              <td style="color: red">2,000</td>
-              <td style="color: red">2,000</td>
-              <td style="color: red">2,000</td>
-              <td style="color: red">2,000</td>
-            </tr>
-            <tr>
-              <td style="background-color: lightgreen">5,000</td>
-              <td style="background-color: lightgreen">18,000</td>
-              <td style="background-color: lightgreen">48,026.36</td>
-              <td style="background-color: lightgreen">142,302.33</td>
+              <td style="color: #47a51a">5,000</td>
+              <td style="color: #47a51a">18,000</td>
+              <td style="color: #47a51a">48,026.36</td>
+              <td style="color: #47a51a">142,302.33</td>
             </tr>
           </tbody>
         </table>
