--- a/pages/main.html
+++ b/pages/main.html
@@ -1,5 +1,3 @@
-
-
 <div class="form_container">
   <div class="left">
     <div class="left_cont">
@@ -23,7 +21,9 @@
         <div class="form-group password-group">
           <div class="label">
             <label for="password">Password</label>
-            <span class="show-password"  id="toggle-password">SHOW</span>
+            <span class="show-password" id="toggle-password"
+              >SHOW</span
+            >
           </div>
           <div class="input-wrapper">
             <input
@@ -44,8 +44,8 @@
 
           <a href="#" class="reset-password">Reset Password</a>
         </div>
-        <a href="#dashboard-page" class="login-button">Login</a>
-        <!-- <button type="submit" class="login-button">Login</button> -->
+        <!-- <a href="#dashboard-page" class="login-button">Login</a> -->
+        <button type="submit" class="login-button">Login</button>
       </form>
     </div>
   </div>
@@ -54,4 +54,3 @@
   </div>
 </div>
 <script src="../js/main.js"></script>
-
