commit to merge

--- a/pages/main.html
+++ b/pages/main.html
@@ -44,8 +44,8 @@
 
           <a href="#" class="reset-password">Reset Password</a>
         </div>
-        <a href="#dashboard-page" class="login-button">Login</a>
-        <!-- <button type="submit" class="login-button">Login</button> -->
+        <!-- <a href="#dashboard-page" class="login-button">Login</a> -->
+        <button type="submit" class="login-button">Login</button>
       </form>
     </div>
   </div>
