--- a/pages/report-data.html
+++ b/pages/report-data.html
@@ -21,10 +21,10 @@
         <img src="../assets/sales-x.svg" alt="" />
       </div>
       <div class="report-data-actions">
-        <button class="report-data-back">
+        <a href="#/report/report" class="report-data-back">
           <img src="../assets/back.svg" alt="" />
           Back To Report
-        </button>
+        </a>
         <button class="report-data-export">
           <img src="../assets/export-arrow.svg" alt="" />
           Export Report
