--- a/pages/report-table.html
+++ b/pages/report-table.html
@@ -205,7 +205,8 @@
     <div class="reportsuccess-popup">
       <h1>Report created <br />successfully</h1>
       <img src="../assets/sucess-img.svg" class="successimg" />
-      <button class="success-btn">view</button>
+      <a href="#/report/report-data"class="success-btn" exact="active-link"><button class="success-btn">view</button></a>
+   
     </div>
   </div>
 
