Adjusted Dashboard responsiveness

--- a/pages/dashboardPage.html
+++ b/pages/dashboardPage.html
@@ -119,13 +119,16 @@
       <div class="stats-details">
         <!-- prospect conversion section -->
         <div class="chart">
+          <div class="prospects-border-bottom">
           <h3>Prospect Conversion</h3>
+        </div>
           <!-- Chart placeholder -->
           <canvas
             class="dashchart"
             width="100%"
             id="conversionChart"
           ></canvas>
+        </div>
         </div>
         <!-- activity section -->
         <div class="activity">
@@ -149,7 +152,6 @@
             </li>
           </ul>
         </div>
-      </div>
     </div>
   </section>
 </div>
