editted prospect table

--- a/pages/prospect.html
+++ b/pages/prospect.html
@@ -10,7 +10,7 @@
 
 <div>
   <!-- your work goes here -->
-  <div class="report-table-container">
+  <div class="report-table-container" id="prospect-table-container">
     <!-- report table header -->
     <div class="report-table-header">
       <h1>Reports</h1>
@@ -166,7 +166,7 @@
       </table>
       <div class="tableWrapFooter">
       <div class="leftTableWrapFooter">
-        <img src="../assets/leftArrow.svg" alt="" style="width: 10px;">
+        <img src="../assets/leftArrow.svg" alt="" class="img1">
         <div class="prospectPgCount">
           <span>1</span>
           <span>2</span>
