chores: cleaned-up ongoing prospect page

--- a/pages/ongoing-prospect.html
+++ b/pages/ongoing-prospect.html
@@ -5,10 +5,10 @@
   <!-- header -->
   <div class="ongoingProspectHeader">
     <h1>Prospects</h1>
-    <div class="ongoingProspectImgWithText">
+     <a href="#/prospect"  class="ongoingProspectImgWithText" exact="active-link"><div class="ongoingProspectImgWithText">
       <img src="../assets/Vector (6).svg" />
       <p>Back to prospect</p>
-    </div>
+    </div></a>
   </div>
 
   <!-- profilecard -->
@@ -60,7 +60,7 @@
         </div>
         <div class="profileName">
           <h2>Status</h2>
-          <p>Ongoing</p>
+          <p class="ongoing">Ongoing</p>
         </div>
       </div>
     </div>
@@ -164,6 +164,16 @@
       <img src="../assets/CROSS.svg" alt="Plus Icon" />
       <input type="text" placeholder="Say Something..." />
       <img src="../assets/Voice.svg" alt="Microphone Icon" />
+    </div>
+  </div>
+  <!-- pop up div for chat -->
+  <div class="chatwrapper">
+    <div class="poppup">
+      <h2>Start Chat</h2>
+      <div class="textarea-wrapper">
+        <textarea readonly>What's the update on the prospect?</textarea>
+      </div>
+      <button class="doneBtn">Done</button>
     </div>
   </div>
 
