fixed dashboard chart disappearing

--- a/pages/main.html
+++ b/pages/main.html
@@ -53,4 +53,5 @@
     <img src="./assets/help.svg" class="help" alt="help" />
   </div>
 </div>
+<a login style="display: none" href="#/dashboard-page">...</a>
 <script src="../js/main.js"></script>
