make change in html

--- a/pages/dashboardPage.html
+++ b/pages/dashboardPage.html
@@ -45,7 +45,7 @@
             class="action-btn"
             href="#/prospect/create-prospect"
             exact="active-link"
-            >Create Prospect</a
+            >+Create Prospect</a
           >
         </div>
 
