dashboard grid fix

--- a/pages/dashboardPage.html
+++ b/pages/dashboardPage.html
@@ -130,19 +130,21 @@
         </div>
       </div>
       <!-- This the container that contain both the chart and activiy section -->
-      <div class="stats-details">
-        <!-- prospect conversion section -->
-        <div class="chart">
-          <div class="prospects-border-bottom">
-          <h3>Prospect Conversion</h3>
-        </div>
-          <!-- Chart placeholder -->
-          <canvas
-            class="dashchart"
-            width="100%"
-            id="conversionChart"
-          ></canvas>
-        </div>
+
+      <div class="sec-cont">
+        <div class="stats-details">
+          <!-- prospect conversion section -->
+          <div class="chart">
+            <div class="prospects-border-bottom">
+              <h3>Prospect Conversion</h3>
+            </div>
+            <!-- Chart placeholder -->
+            <canvas
+              class="dashchart"
+              width="100%"
+              id="conversionChart"
+            ></canvas>
+          </div>
         </div>
         <!-- activity section -->
         <div class="activity">
@@ -166,6 +168,7 @@
             </li>
           </ul>
         </div>
+      </div>
     </div>
   </section>
 </div>
