edited gender role in create prospect

--- a/pages/create-prospect.html
+++ b/pages/create-prospect.html
@@ -78,7 +78,7 @@
                   </div>
                   <div class="inpTyp">
                     <input type="radio" name="gender" id="female" class="prospectInp" />
-                    <label for="female" class="prospectLbl">Male</label>
+                    <label for="female" class="prospectLbl">Female</label>
                   </div>
                 </div>
               </div>
