--- a/pages/dashboardPage.html
+++ b/pages/dashboardPage.html
@@ -29,7 +29,7 @@
       </div>
     </div>
 
-    <!-- the container that contains both the prospects table and the prospect coonversion and chart -->
+    <!-- the container that contains both the prospects table and the prospect conversion and chart -->
     <div class="content">
       <!-- prospects table that contains the datas -->
       <div class="prospect-actions">
@@ -45,7 +45,7 @@
             class="action-btn"
             href="#/prospect/create-prospect"
             exact="active-link"
-            ><span>+</span> Create Prospect</a
+            ><span style="padding-right: 5px;"> <img src="../assets/plus.svg" alt=""> </span> Create Prospect</a
           >
         </div>
 
@@ -129,8 +129,8 @@
           </table>
         </div>
       </div>
-      <!-- This the container that contain both the chart and activiy section -->
 
+      <!-- This the container that contain both the chart and activiy section -->
       <div class="sec-cont">
         <div class="stats-details">
           <!-- prospect conversion section -->
